# sonar-cxx

./: .behaverc  .dcignore  .deepsource.toml  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DocumentationBacklog.txt  ISSUE_TEMPLATE.md  LICENCE.txt  Lisez-moi.txt  README.md  Readme.txt  appveyor.yml  env.cmd  issues.txt  patch.diff  pom.xml  ut-coverage.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: HTMLTidy.yml  codeql-analysis.yml  cxx-ci.yml  sonarcloud.yml
cxx-checks/: pom.xml
cxx-lint/: pom.xml
cxx-sensors/: pom.xml
cxx-squid/: TODO  pom.xml  pre.cc
cxx-squid-bridge/: README.md  pom.xml
cxx-squid/dox/: 2015-07-24_cpp14_grammar.txt  2016-11-28_cpp17_grammar.txt  2020-04-01_cpp20_grammar-diff.txt  2020-04-01_cpp20_grammar.txt  2023-03-19_cpp23_grammar.txt  README  Right_Angle_Brackets_N1757_05-0017.html  diff-cpp20-cpp23_grammar.txt  grammar-diff.txt
cxx-sslr/: README.md  pom.xml
cxx-sslr-toolkit/: pom.xml
cxx-sslr/sslr-core/: pom.xml
cxx-sslr/sslr-testing-harness/: pom.xml
cxx-sslr/sslr-tests/: pom.xml
cxx-sslr/sslr-toolkit/: pom.xml
cxx-sslr/sslr-xpath/: pom.xml
dox/: README
integration-tests/: Readme.txt  gherkin-rules.xml  pom.xml  requirements.txt  xunit.rnc
integration-tests/features/: boosttest.feature  clangsa.feature  clangtidy.feature  common.py  compiler.feature  coverage.feature  cppcheck.feature  deprecated-rule.feature  environment.py  gherkin-rules.xml  googletest.feature  importing_clangsa_reports.feature  importing_clangsa_scanbuild_reports.feature  importing_coverage.feature  importing_cppcheck_reports.feature  indexing.feature  infer.feature  json-db.feature  line.py  multimodule_analysis.feature  multimodule_analysis_2.feature  regex.feature  samples.feature  smoketest.feature  test.feature  test_create_rules_and_bullseye_import.feature  unknown-rule.feature  (+6 more)
integration-tests/testdata/googletest_bullseye_vs_project/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Nuget.config  Readme  compile_libs.props  configuration.props  configuration_libs.props  configuration_test.props  covfile.cov  includes.props  pathhandling.sln  run_analysis.msbuild  sonar-project.properties
integration-tests/testdata/googletest_bullseye_vs_project/PathHandling/: CMakeLists.txt  PathHandle.cpp  PathHandle.hpp  PathHandling.vcxproj
integration-tests/testdata/googletest_bullseye_vs_project/PathHandling.Test/: CMakeLists.txt  PathHandling.Test.vcxproj  PathHandlingTest.cpp  main.cpp  packages.config
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/: Nuget.config  compile_test.props  configuration.props  covfile.cov  run_analysis.msbuild  sonar-project.properties
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/PathHandling/: CMakeLists.txt
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/PathHandling.Test/: CMakeLists.txt  PathHandling.Test.vcxproj
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/sonarcpp/bullseye-coverage-results/: bullseyecoverage-result-0.xml
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/sonarcpp/externalrules-result/: cpplint-result-0.xml  cpplint-result-1.xml  cpplint-result-3.xml
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/sonarcpp/reports-cppcheck/: cppcheck-result-0.xml
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/sonarcpp/reports-rats/: rats-result-1.xml  rats-result-2.xml  rats-result-3.xml
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/sonarcpp/reports-vera++/: vera++-result-0.xml  vera++-result-1.xml  vera++-result-2.xml  vera++-result-3.xml
integration-tests/testdata/googletest_bullseye_vs_project/SimplePathHandlingLib/sonarcpp/reports-xunit/: xunit-result-0.xml
integration-tests/testdata/googletest_bullseye_vs_project/sonarcpp/bullseye-coverage-results/: bullseyecoverage-result-0.xml
integration-tests/testdata/googletest_bullseye_vs_project/sonarcpp/externalrules-result/: cpplint-result-0.xml  cpplint-result-1.xml  cpplint-result-3.xml
integration-tests/testdata/googletest_bullseye_vs_project/sonarcpp/reports-cppcheck/: cppcheck-result-0.xml
integration-tests/testdata/googletest_bullseye_vs_project/sonarcpp/reports-rats/: rats-result-1.xml  rats-result-2.xml  rats-result-3.xml
integration-tests/testdata/googletest_bullseye_vs_project/sonarcpp/reports-vera++/: vera++-result-0.xml  vera++-result-1.xml  vera++-result-2.xml  vera++-result-3.xml
integration-tests/testdata/googletest_bullseye_vs_project/sonarcpp/reports-xunit/: xunit-result-0.xml
sonar-c-plugin/: pom.xml
sonar-cxx-plugin/: Readme.txt  pom-jf.xml  pom.xml
sonar-cxx-plugin/src/samples/SampleProject/sources/utils/: CMakeLists.txt  code_chunks.cpp
src/: license-header.txt
sslr-cxx-toolkit/: pom.xml
(+2980 files in other folders)
